// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mount rtl render component should be rendered correctly in RTL direction 1`] = `
<span
  class="ant-calendar-picker ant-calendar-picker-rtl"
>
  <div>
    <input
      class="ant-calendar-picker-input ant-input"
      placeholder="Select date"
      readonly=""
      value=""
    />
    <span
      aria-label="calendar"
      class="anticon anticon-calendar ant-calendar-picker-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </div>
</span>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 2`] = `
<span
  class="ant-calendar-picker ant-calendar-picker-rtl"
>
  <div>
    <input
      class="ant-calendar-picker-input ant-input"
      placeholder="Select date"
      readonly=""
      value=""
    />
    <span
      aria-label="calendar"
      class="anticon anticon-calendar ant-calendar-picker-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </div>
</span>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 3`] = `
<span
  class="ant-calendar-picker ant-calendar-picker-rtl"
>
  <span
    style="display:inline-block;width:100%"
  >
    <input
      class="ant-calendar-picker-input ant-input"
      placeholder="Select date"
      readonly=""
      value=""
    />
    <span
      aria-label="calendar"
      class="anticon anticon-calendar ant-calendar-picker-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`mount rtl render component should be rendered correctly in RTL direction 4`] = `
<span
  class="ant-calendar-picker ant-calendar-picker-rtl"
  tabindex="0"
>
  <span
    class="ant-calendar-picker-input ant-input"
  >
    <input
      class="ant-calendar-range-picker-input"
      placeholder="Start date"
      readonly=""
      tabindex="-1"
      value=""
    />
    <span
      class="ant-calendar-range-picker-separator"
    >
       ~ 
    </span>
    <input
      class="ant-calendar-range-picker-input"
      placeholder="End date"
      readonly=""
      tabindex="-1"
      value=""
    />
    <span
      aria-label="calendar"
      class="anticon anticon-calendar ant-calendar-picker-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="calendar"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
        />
      </svg>
    </span>
  </span>
</span>
`;
